# lang_channel_ai

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: main.py
