[project]
name = "lang-channel-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0.post0",
    "beanie>=1.30.0",
    "dotenv>=0.9.9",
    "langchain-mongodb>=0.6.2",
    "langgraph>=0.5.0",
]


[tool.ruff]
line-length = 100


[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
